compiler/testData/diagnostics/tests/nullableTypes/unsafeCallOnOperatorRedCode.fir.kt
fun add(a: Int?, b: Int?): Int {
    return a<!UNSAFE_OPERATOR_CALL!>+<!><!SYNTAX!><!>
}
